# onchain-ruby/lib/onchain-api.rb
@@ -32,12 +32,14 @@ require 'onchain-api/models/hash_to_sign'
 require 'onchain-api/models/history_reply'
 require 'onchain-api/models/history_reply_tx'
 require 'onchain-api/models/multi_sig_transaction_request'
+require 'onchain-api/models/payment_request'
 require 'onchain-api/models/raw_transaction_send_request'
 require 'onchain-api/models/transaction_recipient'
 require 'onchain-api/models/transaction_reply'
 require 'onchain-api/models/transaction_request'
 require 'onchain-api/models/transaction_send_reply'
 require 'onchain-api/models/transaction_send_request'
+require 'onchain-api/models/transaction_source'
 
 # APIs
 require 'onchain-api/api/address_api'
