# onchain-rust/src/models/mod.rs
@@ -28,6 +28,8 @@ pub mod history_reply_tx;
 pub use self::history_reply_tx::HistoryReplyTx;
 pub mod multi_sig_transaction_request;
 pub use self::multi_sig_transaction_request::MultiSigTransactionRequest;
+pub mod payment_request;
+pub use self::payment_request::PaymentRequest;
 pub mod raw_transaction_send_request;
 pub use self::raw_transaction_send_request::RawTransactionSendRequest;
 pub mod transaction_recipient;
@@ -40,3 +42,5 @@ pub mod transaction_send_reply;
 pub use self::transaction_send_reply::TransactionSendReply;
 pub mod transaction_send_request;
 pub use self::transaction_send_request::TransactionSendRequest;
+pub mod transaction_source;
+pub use self::transaction_source::TransactionSource;
